--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(add)
 export(all_same)
 export(all_true)
 export(are_all)
+export(is_true)
 export(md5)
 export(not)
 importFrom(digest,digest)
