--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: funtools
 Type: Package
-Title: Provides Functional Building Blocks for Inventoryverse 
-Version: 2018.05.23
+Title: Provides Functional Building Blocks 
+Version: 2019.03.26
 Author: David Holstius
 Maintainer: David Holstius <dholstius@baaqmd.gov>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: What license is it under?
+Depends: purrr
+Enhances: inventory
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
