--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,7 @@ export(are_all)
 export(is_true)
 export(md5)
 export(not)
+export(preduce)
 export(rbind_list)
+export(sum_of)
 importFrom(digest,digest)
