--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: funtools
 Type: Package
 Title: Provides Functional Building Blocks 
-Version: 2019.11.21
+Version: 2019.12.02
 Author: David Holstius
 Maintainer: David Holstius <dholstius@baaqmd.gov>
 Description: More about what it does (maybe more than one line)
@@ -12,3 +12,6 @@ Enhances: inventory
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.0
+Suggests: 
+    tidyverse,
+    testthat (>= 2.1.0)
