--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,19 @@
 Package: funtools
 Type: Package
 Title: Provides Functional Building Blocks 
-Version: 2019.12.02
+Version: 2020.05.12
 Author: David Holstius
 Maintainer: David Holstius <dholstius@baaqmd.gov>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: What license is it under?
-Depends: purrr
+Depends: 
+  purrr,
+  rlang
 Enhances: inventory
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.0.0
+RoxygenNote: 7.1.0
 Suggests: 
     tidyverse,
     testthat (>= 2.1.0)
