--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,4 +13,11 @@ export(pmean)
 export(preduce)
 export(rbind_list)
 export(sum_of)
+import(rlang)
 importFrom(digest,digest)
+importFrom(lazyeval,lazy_dots)
+importFrom(lazyeval,lazy_eval)
+importFrom(purrr,pmap)
+importFrom(purrr,pmap_dbl)
+importFrom(purrr,reduce)
+importFrom(rlang,is_integerish)
