--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,14 +6,17 @@ Author: David Holstius
 Maintainer: David Holstius <dholstius@baaqmd.gov>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: CC0
 Depends: 
   purrr,
   rlang
-Enhances: inventory
+Imports:
+  digest,
+  lazyeval
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
 Suggests: 
     tidyverse,
-    testthat (>= 2.1.0)
+    testthat (>= 2.1.0),
+    dplyr
