--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,8 @@ export(add)
 export(all_same)
 export(all_true)
 export(are_all)
+export(eval_f)
 export(every_nth)
-export(is_true)
 export(md5)
 export(not)
 export(pmean)
@@ -20,4 +20,6 @@ importFrom(lazyeval,lazy_eval)
 importFrom(purrr,pmap)
 importFrom(purrr,pmap_dbl)
 importFrom(purrr,reduce)
+importFrom(rlang,as_quosure)
+importFrom(rlang,eval_tidy)
 importFrom(rlang,is_integerish)
