Fix R CMD "Note" by explicitly importing these functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,8 +16,10 @@ export(rbind_list)
 export(sum_of)
 import(rlang)
 importFrom(digest,digest)
+importFrom(dplyr,progress_estimated)
 importFrom(lazyeval,lazy_dots)
 importFrom(lazyeval,lazy_eval)
+importFrom(purrr,map)
 importFrom(purrr,pmap)
 importFrom(purrr,pmap_dbl)
 importFrom(purrr,reduce)
