--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,11 +12,11 @@ Depends:
   rlang
 Imports:
   digest,
-  lazyeval
+  lazyeval,
+  dplyr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Suggests: 
     tidyverse,
-    testthat (>= 2.1.0),
-    dplyr
+    testthat (>= 2.1.0)
