--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,9 +7,8 @@ Maintainer: David Holstius <dholstius@baaqmd.gov>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: CC0
-Depends: 
-  rlang
 Imports:
+  rlang,
   purrr,
   digest,
   lazyeval,
