--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(md5)
 export(not)
 export(pmean)
 export(preduce)
+export(progressively)
 export(rbind_list)
 export(sum_of)
 import(rlang)
@@ -19,6 +20,7 @@ importFrom(digest,digest)
 importFrom(dplyr,progress_estimated)
 importFrom(lazyeval,lazy_dots)
 importFrom(lazyeval,lazy_eval)
+importFrom(progress,progress_bar)
 importFrom(purrr,map)
 importFrom(purrr,pmap)
 importFrom(purrr,pmap_dbl)
